Feat: Initialize DEMO

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -219,8 +219,8 @@
     </div>
 
     <!-- REMOVER -app PARA FUNCIONAR O FIREBASE, O LINK ESTA ERRADO -->
-    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script> -->
 
     <script src="src/controller/DropBoxController.js"></script>
     <script src="src/index.js"></script>
